@@ -45,7 +45,7 @@
    "provides" : {
       "App::ClusterSSH" : {
          "file" : "lib/App/ClusterSSH.pm",
-         "version" : "4.02_02"
+         "version" : "4.02_03"
       },
       "App::ClusterSSH::Base" : {
          "file" : "lib/App/ClusterSSH/Base.pm",
@@ -90,5 +90,5 @@
          "http://github.com/duncs/clusterssh"
       ]
    },
-   "version" : "4.02_02"
+   "version" : "4.02_03"
 }
